chore: Improvements for alias in autogeneration  (#3934)
* chore: Supports aliases in the ImportState method implementation of auto-generated resources (#3930)

* implement alias in import

* pr

* pr comment

* remove fallback

* tests

* improvements

* example of alias in project_settings_api

* use camelCase instead of PascalCase for aliases

* correctly apply aplias

* autogen with alias improvements

* fix unit test

* fix test

* correctly support nested attributes inside attributes with multiple capital letters

* revert tools-version

* add test case

* attrPaths struct instead of paths as strings

* make autogen tag an independent tag

* change comment that was no longer true

* improve unmarshall

* temp: alias in a path param and API request body attribute

* add test for aliasing attributes present in path and in request and response

* Update tools/codegen/config.yml


* clarify in comment

* test fix because of alias

---------
